Add biometric authentication

--- a/Doorlock/app/src/main/res/values/strings.xml
+++ b/Doorlock/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="biometric_title">Authenticate</string>
+    <string name="biometric_subtitle">Authenticate yourself via biometrics</string>
+    <string name="biometric_description">Place your finger on the fingerprint sensor to verify your identity</string>
+    <string name="biometric_negative_button_text">CANCEL</string>
+
+    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
+    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
+    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
+    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
+    <string name="biometric_failure">Login not successful!</string>
+    <string name="biometric_cancelled">Authentication cancelled by user</string>
+    <string name="biometric_success">Authenticated Successfully</string>
 </resources>
